# Turtle

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
data/: com.github.tenderowl.turtle.appdata.xml.in  com.github.tenderowl.turtle.desktop.in  com.github.tenderowl.turtle.gresource.xml  com.github.tenderowl.turtle.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: widgets.ui  window.ui
flatpak/: com.github.tenderowl.turtle.json
po/: POTFILES  meson.build
turtle/: config.py  main.py  window.py
turtle/widgets/: app_list_row.py
